--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "repository": "https://github.com/pouchdb/pouchdb",
   "jsnext:main": "./lib/index.es.js",
   "dependencies": {
-    "pouchdb-adapter-websql-core": "7.1.1",
+    "pouchdb-adapter-websql-core": "git+https://github.com/gaodeng/pouchdb-adapter-websql-core.git#7.1.1",
     "pouchdb-utils": "7.1.1",
     "websql": "^1.0.0"
   },
