--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
   "name": "pouchdb-adapter-node-websql",
-  "version": "7.0.0-prerelease",
+  "version": "7.2.2",
   "description": "PouchDB adapter using Node-based SQLite as its data store.",
   "main": "./lib/index.js",
   "keywords": [],
   "author": "Dale Harvey <dale@arandomurl.com>",
   "license": "Apache-2.0",
   "repository": "https://github.com/pouchdb/pouchdb",
-  "jsnext:main": "./src/index.js"
+  "jsnext:main": "./lib/index.es.js",
+  "dependencies": {
+    "pouchdb-adapter-websql-core": "git+https://github.com/gaodeng/pouchdb-adapter-websql-core.git#7.2.2",
+    "pouchdb-utils": "7.2.2",
+    "websql": "^2.0.1"
+  },
+  "module": "./lib/index.es.js",
+  "files": [
+    "lib",
+    "dist",
+    "tonic-example.js"
+  ]
 }
